--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
 {
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "backend.py"
-      }
-    ]
-  }
+  "builds": [
+    {
+      "src": "main.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "main.py"
+    }
+  ]
+}
